# fano-explorer

./: .gitignore  CLAUDE.md  README.md  TASK_ORCHESTRATION_REVIEW.md  config.yaml  fano.py  fano_explorer.py  pyproject.toml  pytest.ini
.claude/: settings.json  settings.local.json
.claude/commands/: c.md  clp.md
.claude/scripts/: clipboard-save.sh
blessed_insights/: insight_001.json
control/: __init__.py  debug_util.py  server.py
control/blueprints/: __init__.py  annotations.py  components.py  documenter.py  explorer.py  pool.py  researcher.py  status.py  ui.py
control/services/: __init__.py  config.py  explorer_data.py  process_manager.py
control/templates/: index.html
data/explorations/: d9173853-d2d.json
docs/design/: UNIFIED_ORCHESTRATION_DESIGN.md  chatgpt-review.txt  gemini-review.txt
docs/requirements/: atomic-chunking.md  automated-review-panel.md  (+6 more)
document/: audit_report.json  guidance.md  main.md  main_full.md
documenter/: __init__.py  adapter.py  annotations.py  comments.py  concepts.py  config.yaml  document.py  fano_documenter.py  formatting.py  main.py  opportunities.py  opportunity_processor.py  planning.py  review.py  session.py  snapshots.py  tasks.py  versions.py
explorer/: README.md  __init__.py  config.yaml  fano_explorer.py  requirements.txt
pool/: README.md  __init__.py  browser_pool.py  config.yaml  run_pool.py
researcher/: .gitignore  __init__.py  main.py
scripts/: restart_control.sh  restart_pool.sh  run_py.sh  svc.sh
shared/: __init__.py  deduplication.py  prompts.py
src/: orchestrator.py
templates/: review.html
(+585 files in other folders)
